<h5>1.4 Alpha 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.9
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- reverted in_array() true check (mamba)
- reversed to while (list()) (mamba)
- fix Capital letters in getHandler() (ggoffy/mamba)
- fix namespaces in oninstall (ggoffy/mamba)
WORK IN PROGRESS

<h5>1.3     NOT RELEASED</h5>
<hr>
 - replaced "dirname(__FILE__)" with "__DIR__" (mamba)
 - centered icons in tables (mamba)
 - some English updates (mamba)
 - standardize code (mamba,luciorota)
 - import procedure: check if limit options are compatible with php.ini 'max_input_vars' setting (luciorota)
 - update procedure: rename module's directory name to lowercase (luciorota)
 - templatize user side (luciorota)
 - added: send attachment as email attachment or as link (luciorota)
 - added: possibility to choose the maximum number of attachments (luciorota)
 - added: calculate email and attachments size (luciorota)
 - added: possibility to store templates also in database (luciorota)
 - added: html2txt function for non-HTML mail clients (luciorota)
 - added: breadcrumb class (luciorota)
 - added: updating to XOOPS 2.5.7 Multi-page help (luciorota)
 - fixed: when there is an apostrophe in the title, a backslash is obtained on reading the email (luciorota)
 - moved /css and /images to /assets (mamba)
 - renamed template extensions from .html to .tpl (mamba)
 - reversed "mod_" prefix on tables (mamba)
 - normalized prefixes for language constants to XNEWSLETTER (mamba)
 - replaced $i++ with ++$i (mamba)

<h5>1.2</h5>
<hr>
 - standardize code (luciorota)
 - added newsletter info field is html compatible (luciorota)
 - added new tag <{$title}> in letter templates (luciorota)
 - added new block for general info (feichtl/goffy)
 - removed xoops captcha when unsubscribe by link (feichtl/goffy)
 - transfered error text to language file (feichtl/goffy)
 - fixed bug when filter subscribers in admin/subscr.php (feichtl/goffy)