@@ -30,6 +30,7 @@ class Configurator
 {
     public $name;
     public $paths           = [];
+    public $icons           = [];
     public $uploadFolders   = [];
     public $copyBlankFiles  = [];
     public $copyTestFolders = [];
@@ -45,14 +46,12 @@ class Configurator
      */
     public function __construct()
     {
-//        $moduleDirName      = basename(dirname(dirname(__DIR__)));
-//        $moduleDirNameUpper = mb_strtoupper($moduleDirName);
 
-        require dirname(dirname(__DIR__)) . '/config/config.php';
-        $config = getConfig();
+//        require dirname(dirname(__DIR__)) . '/config/config.php';
+//        $config = getConfig();
 
+        $config = include dirname(dirname(__DIR__)) . '/config/config.php';
         $this->name            = $config->name;
-        $this->paths           = $config->paths;
         $this->uploadFolders   = $config->uploadFolders;
         $this->copyBlankFiles  = $config->copyBlankFiles;
         $this->copyTestFolders = $config->copyTestFolders;
@@ -62,5 +61,8 @@ class Configurator
         $this->renameTables    = $config->renameTables;
         $this->moduleStats     = $config->moduleStats;
         $this->modCopyright    = $config->modCopyright;
+
+        $this->paths = include dirname(dirname(__DIR__)) . '/config/paths.php';
+        $this->icons = include dirname(dirname(__DIR__)) . '/config/icons.php';
     }
 }
