@@ -1,3 +1,10 @@
+<h5>1.4 Beta 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.10
+<hr>
+- fix getConfig() (ggoffy/mamba)
+- fix call to PHPMailer (ggoffy/mamba)
+- add check for getModule() in menu (mamba)
+- add chceck for $pathModIcon32 in menu (mamba)
+
 <h5>1.4 Alpha 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.9
 <hr>
 - namespaces (mamba)
@@ -7,6 +14,7 @@
 - fix Capital letters in getHandler() (ggoffy/mamba)
 - fix namespaces in oninstall (ggoffy/mamba)
 WORK IN PROGRESS
+
 
 <h5>1.3     NOT RELEASED</h5>
 <hr>
@@ -30,6 +38,7 @@ WORK IN PROGRESS
  - reversed "mod_" prefix on tables (mamba)
  - normalized prefixes for language constants to XNEWSLETTER (mamba)
  - replaced $i++ with ++$i (mamba)
+
 
 <h5>1.2</h5>
 <hr>
@@ -58,6 +67,7 @@ WORK IN PROGRESS
  - Update Adminindex (alfred)
  - fix userinput (alfred)
 
+
 <h5>1.1</h5>
 <hr>
  - Add option to send newsletters in packages by using a cronjob (goffy)
@@ -68,6 +78,7 @@ WORK IN PROGRESS
  - Fix errors in languages(alfred)
  - fix error none subscriber for send newsletter (goffy)
  - fix error in blocks (goffy)
+
 
 <h5>1.0</h5>
 <hr>
